Setup.py -> setup.cfg, setup tox properly

--- a/tox.ini
+++ b/tox.ini
@@ -2,6 +2,19 @@
 basepython = 3.9
 isolated_builds = True
 
+[testenv:test]
+deps =
+    pytest
+commands =
+    pytest {posargs}
+
+[testenv:docs]
+deps =
+    sphinx
+    pydata_sphinx_theme
+commands = sphinx-build -d "{toxworkdir}/docs_doctree" doc "{toxworkdir}/docs_out" --color -W -bhtml {posargs}
+           python -c 'import pathlib; print("documentation available under file://\{0\}".format(pathlib.Path(r"{toxworkdir}") / "docs_out" / "index.html"))'
+
 [testenv:format]
 skip_install = True
 commands =
