--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,23 +1,26 @@
-image: continuumio/miniconda3:latest
+image: condaforge/miniforge3
+
+stages:
+  - lint
+  - test
+  - publish
 
 before_script:
-  - apt-get update -q -y
-  - apt-get install -y build-essential
-  - conda update -n base conda
-  - conda env create -f environment.yml
-  - source activate tim
-  - pip install -e .
-
-tests:
+  - pip install tox
+    
+lint:
   script:
-    - black --check . 
+    - tox -e lint
+
+test:
+  script:
+    - tox -e test
 
 pages:
+  stage: publish
   script:
-  - cd docs
-  - make html
-  - cd ..
-  - mv docs/_build/html/ public/
+  - tox -e docs
+  - mv .tox/docs/docs_out/html/ public/
   artifacts:
     paths:
     - public
