Fix tox invocation error?

--- a/tox.ini
+++ b/tox.ini
@@ -3,17 +3,17 @@ basepython = 3.9
 isolated_build = True
 
 [testenv:test]
+commands = 
+    pytest gistim/test/ 
 deps =
     pytest
-commands =
-    pytest {posargs}
 
 [testenv:docs]
+commands = sphinx-build -d "{toxworkdir}/docs_doctree" doc "{toxworkdir}/docs_out" --color -W -bhtml
+           python -c 'import pathlib; print("documentation available under file://\{0\}".format(pathlib.Path(r"{toxworkdir}") / "docs_out" / "index.html"))'
 deps =
     sphinx
     pydata_sphinx_theme
-commands = sphinx-build -d "{toxworkdir}/docs_doctree" doc "{toxworkdir}/docs_out" --color -W -bhtml {posargs}
-           python -c 'import pathlib; print("documentation available under file://\{0\}".format(pathlib.Path(r"{toxworkdir}") / "docs_out" / "index.html"))'
 
 [testenv:format]
 skip_install = True
