--- a/setup.cfg
+++ b/setup.cfg
@@ -1,25 +1,26 @@
 [metadata]
 name = gistim
-version = 0.3.1
+version = 0.4.0
 author = Huite Bootsma
 author_email = huite.bootsma@deltares.nl
 description = GIS utilities for Tim(ML) Analytic Element modeling
-url = https://gitlab.com/deltares/imod/qgis-tim
+url = https://github.com/Deltares/QGIS-Tim
 project_urls =
-    Code=https://gitlab.com/deltares/imod/imod-qgis
-    Issues=https://gitlab.com/deltares/imod/qgis-tim/-/issues
+    Code=https://github.com/Deltares/QGIS-Tim
+    Issues=https://github.com/Deltares/QGIS-Tim/issues
 long_description = file: README.rst
-license = MIT
+license = GPL-2.0
 classifiers =
     Development Status :: 3 - Alpha
     Intended Audience :: Science/Research
-    License :: OSI Approved :: MIT License
+    License :: OSI Approved :: GPL-2.0 License
     Operating System :: OS Independent
     Programming Language :: Python
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
     Programming Language :: Python :: Implementation :: CPython
     Topic :: Scientific/Engineering
 keywords = 
