--- a/setup.cfg
+++ b/setup.cfg
@@ -13,7 +13,7 @@ license = GPL-2.0
 classifiers =
     Development Status :: 3 - Alpha
     Intended Audience :: Science/Research
-    License :: OSI Approved :: GPL-2.0 License
+    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
     Operating System :: OS Independent
     Programming Language :: Python
     Programming Language :: Python :: 3
