--- a/pixi.toml
+++ b/pixi.toml
@@ -13,6 +13,7 @@ repository = "https://github.com/Deltares/qgis-tim"
 [tasks]
 install = "pip install --no-deps --editable ."
 build-backend = "pyinstaller gistim/__main__.py --name gistim"
+create-archive = "python .github/workflows/create_archive.py"
 
 [dependencies]
 python = "3.11"
