--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,4 +28,4 @@ jobs:
       - name: Upload archive
         uses: softprops/action-gh-release@v1
         with: 
-          files: *.zip
+          files: "*.zip"
