--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,6 +15,8 @@ jobs:
     strategy:
       matrix:
         os:
+          - ubuntu-latest
+          - macOS-latest
           - windows-latest
     steps:
       - name: Check out repo
@@ -26,7 +28,7 @@ jobs:
       - name: Create ZIP Archive
         run: pixi run create-archive
       - name: Release
-        run: gh release create ${{github.ref_name}} dist/gistim-Windows.zip
+        run: gh release upload ${{ github.ref_name }} dist/gistim-${{ RUNNER_OS }}.zip sha256-${{ RUNNER_OS }}.txt
         env:
           GITHUB_TOKEN: ${{ github.TOKEN }}
  
