--- a/pixi.toml
+++ b/pixi.toml
@@ -13,11 +13,12 @@ repository = "https://github.com/Deltares/qgis-tim"
 [tasks]
 install = "pip install --no-deps --editable ."
 build-backend = "pyinstaller gistim/__main__.py --name gistim"
-create-archive = "python .github/workflows/create_archive.py"
+create-archive = {depends_on = "install", cmd = "python .github/workflows/create_archive.py"}
 
 [dependencies]
 python = "3.11"
 future = "*"
+pip = "*"
 
 # Conda-forge will distribute numpy and scipy with Intel MKL, which adds 600 MB
 # to the pyinstaller result. By installing from PyPI instead, we can skip MKL.
