--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,10 +25,18 @@ jobs:
         uses: prefix-dev/setup-pixi@v0.4.1
       - name: Build with PyInstaller
         run: pixi run build-backend
-      - name: Create ZIP Archive
-        run: pixi run create-archive
-      - name: Release
+      - name: Create backend ZIP
+        run: pixi run zip-backend
+      - name: Release backend ZIP
         run: gh release upload ${{ github.ref_name }} dist/gistim-${{ runner.os }}.zip dist/sha256-checksum-${{ runner.os }}.txt
+        env:
+          GITHUB_TOKEN: ${{ github.TOKEN }}
+      - name: Create plugin ZIP
+        if: matrix.os == 'ubuntu-latest'
+        run: pixi run zip-plugin
+      - name: Release plugin ZIP
+        if: matrix.os == 'ubuntu-latest'
+        run: gh release upload ${{ github.ref_name }} plugin/QGIS-Tim-plugin.zip
         env:
           GITHUB_TOKEN: ${{ github.TOKEN }}
  
