--- a/pixi.toml
+++ b/pixi.toml
@@ -13,7 +13,8 @@ repository = "https://github.com/Deltares/qgis-tim"
 [tasks]
 install = "pip install --no-deps --editable ."
 build-backend = "pyinstaller gistim/__main__.py --name gistim"
-create-archive = {depends_on = "install", cmd = "python .github/workflows/create_archive.py"}
+zip-backend = {depends_on = "install", cmd = "python .github/workflows/create_pyinstaller_zip.py"}
+zip-plugin = "python .github/workflows/create_plugin_zip.py"
 
 [dependencies]
 python = "3.11"
