Rename to depends-on in pixi.toml
Will soon be deprecated.
See https://github.com/Deltares/Ribasim/pull/1993

--- a/pixi.toml
+++ b/pixi.toml
@@ -13,7 +13,7 @@ repository = "https://github.com/Deltares/qgis-tim"
 [tasks]
 install = "pip install --no-deps --editable ."
 build-backend = "pyinstaller gistim/__main__.py --name gistim"
-zip-backend = {depends_on = "install", cmd = "python .github/workflows/create_pyinstaller_zip.py"}
+zip-backend = {depends-on = "install", cmd = "python .github/workflows/create_pyinstaller_zip.py"}
 zip-plugin = "python .github/workflows/create_plugin_zip.py"
 
 [dependencies]
